More FindBugs errors fixed